Fix header that overflowed x axis

--- a/src/modules/utils/components/page-header/page-header.component.css
+++ b/src/modules/utils/components/page-header/page-header.component.css
@@ -4,27 +4,31 @@
   display: block;
   font-weight: 500;
   font-size: 2.2rem;
-  padding: 1.2rem;
+  padding: 1.2rem 0;
   width: 100%;
+}
+
+h1 {
+  font-size: 1em;
 }
 
 @media (max-width: 992px) {
   :host {
     font-size: 1.9rem;
-    margin: 1.0rem;
+    margin: 1.0rem 0;
   }
 }
 
 @media (max-width: 768px) {
   :host {
     font-size: 1.6rem;
-    margin: 0.8rem;
+    margin: 0.8rem 0;
   }
 }
 
 @media (max-width: 576px) {
   :host {
     font-size: 1.3rem;
-    margin: 0.6rem;
+    margin: 0.6rem 0;
   }
 }
